Add new npm script
- test:dev

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepush": "npm run test",
     "commit": "git-cz",
     "dev": "cross-env NODE_ENV=development node server.js",
-    "test": "cross-env NODE_ENV=test mocha ./test/**/*.spec.js --compilers js:babel-register --watch",
+    "test": "cross-env NODE_ENV=test mocha ./test/**/*.spec.js --compilers js:babel-register",
+    "test:dev": "cross-env NODE_ENV=test mocha ./test/**/*.spec.js --compilers js:babel-register --watch",
     "clean": "rimraf lib dist",
     "build": "babel src --out-dir lib",
     "build:umd": "webpack src/index.js dist/react-selectr.js && cross-env NODE_ENV=production webpack src/index.js dist/react-selectr.min.js",
