--- a/package.json
+++ b/package.json
@@ -40,27 +40,27 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
-    "commitizen": "^2.8.7",
-    "cross-env": "^3.1.4",
-    "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "commitizen": "^4.0.3",
+    "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "husky": "^0.13.1",
-    "mocha": "^3.2.0",
-    "nyc": "^10.0.0",
+    "husky": "^3.0.4",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-hot-loader": "^3.0.0-beta.2",
-    "rimraf": "^2.6.0",
-    "semantic-release": "^6.3.6",
-    "semantic-release-gitlab": "^2.5.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
+    "react-hot-loader": "^4.12.11",
+    "rimraf": "^3.0.0",
+    "semantic-release": "^15.13.24",
+    "semantic-release-gitlab": "^8.0.1",
+    "webpack": "^4.39.2",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.17.0"
   },
   "dependencies": {
